agrege cajas en servicios con su clase de estilo

--- a/servicios.html
+++ b/servicios.html
@@ -70,6 +70,15 @@
         </h2>
     </div>
 
+    <div class="a">
+        <h2>Elige el tuyo</h2>
+            <section class="sec sec1">
+            <div class="caja caja11"><h5>Diurno</h5></div>
+            <div class="caja caja33"><h5>Nocturno</h4></div>
+            <div class="caja caja22"><h5>Fiesta</h4></div>
+        </section>
+    </div>
+
     <footer>
         <p>Todos los derechos reservados por copyrigth</p>
         <div class="redes">
