--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="icon" href="multimedia/icono.ico">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilos.css">
     <title>Coco Pink</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!--div class="logo">Coco <span>Pink</span></div-->
 
         <nav class="navbar navbar-expand-md navbar-dark">
