--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="makeup, maquillaje, servicio, fiesta, novias, maquillajeprofesional">
+    <meta name="descripcion." content="NUESTROS SERVICIO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
+    TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
+    OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
