Hice responsive el html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -70,12 +70,12 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3992951048176!2d-58.48442192417386!3d-34.69510746233052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcceb7695d3afd%3A0x3b59ffd67ca566a4!2s%C3%81lvarez%202634%2C%20B1772%20Villa%20Madero%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1684988410520!5m2!1ses!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade" class=" embed-responsive">Mapa de sitio </iframe>
         </div>
 
         <div class="count">
             <h2>Contactanos</h2>
-            <form>
+            <form class="container">
                 <p>Nombre</p>
                 <input type="text"><br>
 
