--- a/servicios.html
+++ b/servicios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +21,7 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Servicios</title>
 </head>
+
 <body>
     <header>
         <!--div class="logo">Coco <span>Pink</span></div-->
@@ -52,18 +54,19 @@
             </div>
         </nav>
     </header>
-    
+
     <div class="jumbotron5">
         <button type="button" class="btn btn-light">
             <h1>Servicios!</h1>
         </button>
         <div><button type="button" class="btn btn-light">
-                <p>COCO PINK... El Sueño de mi Vida</p>
-            </button></div>
+            <p>COCO PINK... El Sueño de mi Vida</p>
+        </button></div>
     </div>
 
     <div class="fondo">
-        <p>Servicio personalizado para todo eventos sociales, diurno, nocturno, bodas, 15 años, madrinas o para simplemente verte hermosa y radiante todos los dias! </p><br><br><br>
+        <p>Servicio personalizado para todo eventos sociales, diurno, nocturno, bodas, 15 años, madrinas o para
+            simplemente verte hermosa y radiante todos los dias! </p><br><br><br>
 
         <h2>
             <p>Combo Descuento 2x1 en Make Up Diurno!</p>
@@ -72,10 +75,16 @@
 
     <div class="a">
         <h2>Elige el tuyo</h2>
-            <section class="sec sec1">
-            <div class="caja caja11"><h5>Diurno</h5></div>
-            <div class="caja caja33"><h5>Nocturno</h4></div>
-            <div class="caja caja22"><h5>Fiesta</h4></div>
+        <section class="sec sec1">
+            <div class="caja caja11">
+                <h5>Diurno</h5>
+            </div>
+            <div class="caja caja33">
+                <h5>Nocturno</h4>
+            </div>
+            <div class="caja caja22">
+                <h5>Fiesta</h4>
+            </div>
         </section>
     </div>
 
@@ -105,6 +114,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
-    
+
 </body>
+
 </html>
