--- a/index.html
+++ b/index.html
@@ -15,36 +15,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Homemade+Apple&family=Reenie+Beanie&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" href="multimedia/icono.ico">
     <link rel="stylesheet" href="estilos.css">
     <title>Coco Pink</title>
 </head>
 
 <body>
-    <header class="header">
-        <!--div class="logo">Coco <span>Pink</span></div-->
 
-        <nav class="navbar navbar-expand-md navbar-dark">
-            <!-- Brand -->
-            <a class="navbar-brand logo" href="#">Coco <span>Pink</span></a>
-
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <!--barra de navegacion -->
+    <div>
+        <nav class="navbar navbar-expand-md navbar-light navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <a class="navbar-brand" href="index.html">
+                    <i class="bi-bi bi bi-gem"></i>
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -58,7 +62,19 @@
                 </ul>
             </div>
         </nav>
-    </header>
+    </div>
+
+    <section class="seccion-oscura cuerpo align-items-stretch">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <img src="multimedia/icono.ico" alt="foto" class="nav-logo-logo">
+            <h1>Coco Pink</h1>
+            <h2>Servicio de Maquillaje Profesional.</h2>
+        </div>
+    </section>
+
+
+
+
 
     <main>
         <div class="imagen">
@@ -72,50 +88,94 @@
             <div class="item item8"></div>
         </div>
 
-        <article class="list">
-            <div class="count">
-                <p> <span>Coco Pink</span> <br> <br> El secreto de un gran estilo es sentirse bien con lo que vistes. Tu
-                    imagen refleja la mujer que eres. Muestra tu potencial. Brilla e irradia luz</p> <br>
-                <a href="coleccionbasicos.html">Ver mas</a>
-            </div>
+        <article class="experiencia">
+            <div class="container-fluid text-center">
+                <div class="row">
+                    <div class="columna1 col-12 col-md-6">
+                        <p> <span>Coco Pink</span> <br> <br> El secreto de un gran estilo es sentirse bien con lo que
+                            vistes. Tu
+                            imagen refleja la mujer que eres. Muestra tu potencial. Brilla e irradia luz</p> <br>
+                        <div class="badges-contenedor">
+                            <button type="button" class="badge btn-secondary"><a href="coleccionbasicos.html">Ver
+                                    mas</a></button>
+                        </div>
+                    </div>
 
-            <div class="count">
-                <p> <span>Night Exclusive Collection</span> <br> <span>Night Exclusive Collection</span> <br>
-                    <span>Night
-                        Exclusive Collection</span> <br> Conocé nuestros elegidos en nuestra coleccion</p> <br>
-                <a href="coleccionnight.html">Ver mas</a>
+                    <div class="columna1 col-12 col-md-6">
+                        <p> <span>Night Exclusive Collection</span> <br> <span>Night Exclusive Collection</span> <br>
+                            <span>Night
+                                Exclusive Collection</span> <br> Conocé nuestros elegidos en nuestra coleccion
+                        </p> <br>
+                        <div class="badges-contenedor">
+                            <button type="button" class="badge btn-secondary"><a href="coleccionnight.html">Ver
+                                    mas</a></button>
+                        </div>
+
+                    </div>
+
+
+
+                </div>
             </div>
         </article>
     </main>
 
-    <main>
-        <div class="a">
-            <a href="coleccionbasicos.html"><h2>Coleccion Basicos</h2></a>
-                <section class="sec sec1">
-                <div class="caja caja1"><h5>nude</h5></div>
-                <div class="caja caja3"><h5>base</h4></div>
-                <div class="caja caja2"><h5>bronce</h4></div>
-            </section>
-    
-            <a href="coleccionnight.html"><h2>Coleccion Night</h2></a>
-            <section class="sec sec1">
-                <div class="caja caja4"><h5>lash</h5></div>
-                <div class="caja caja5"><h5>eyerliner</h5></div>
-                <div class="caja caja6"><h5>gloss</h5></div>
-            </section>
-        </div>
-    </main>
-    
+    <section class="experiencia seccion-gris">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="columna col-12 col-md-4">
+                    <i class="bi bi-gem"></i>
+                    <p class="experiencia-titulo"> <a href="coleccionbasicos.html"></a>Coleccion Basicos</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione culpa necessitatibus in
+                        aliquam, recusandae fuga eaque iste labore veritatis odit temporibus amet deserunt incidunt
+                        aperiam, obcaecati quis illo sint natus?</p>
+                    <div class="badges-contenedor">
+                        <button type="button" class="badge btn-secondary"><a href="coleccionbasicos.html">Ver
+                                mas</a></button>
+                    </div>
+                </div>
+                <div class="columna col-12 col-md-4">
+                    <i class="bi bi-gem"></i>
+                    <p class="experiencia-titulo"><a href="coleccionnight.html"></a>Coleccion Night</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione culpa necessitatibus in
+                        aliquam, recusandae fuga eaque iste labore veritatis odit temporibus amet deserunt incidunt
+                        aperiam, obcaecati quis illo sint natus?</p>
+                    <div class="badges-contenedor">
+                        <button type="button" class="badge btn-secondary"><a href="coleccionnight.html">Ver
+                                mas</a></button>
+                    </div>
+                </div>
+                <div class="columna col-12 col-md-4">
+                    <i class="bi bi-gem"></i>
+                    <p class="experiencia-titulo"><a href="contacto.html"></a>Contactanos!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione culpa necessitatibus in
+                        aliquam, recusandae fuga eaque iste labore veritatis odit temporibus amet deserunt incidunt
+                        aperiam, obcaecati quis illo sint natus?</p>
+                    <div class="badges-contenedor">
+                        <button type="button" class="badge btn-secondary"><a href="contacto.html">Ver mas</a></button>
+                    </div>
+                </div>
 
-    <footer>
-        <p>Todos los derechos reservados por copyrigth</p>
-        <div class="redes">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://walink.co/624b8c"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+
         </div>
+    </section>
+
+    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+        <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
+        <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas.</p>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-whatsapp"></i></a>
+            <a href="#"><i class="bi bi-envelope"></i></a>
+        </div>
+
+        <div>Creado por Coco Pink (2023) &#169;</div>
+
     </footer>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
