--- a/nosotros.html
+++ b/nosotros.html
@@ -10,39 +10,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Homemade+Apple&family=Reenie+Beanie&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" href="multimedia/icono.ico">
     <link rel="stylesheet" href="estilos.css">
     <title>Nosotros</title>
 </head>
 
 <body>
-    <header>
-        <!--div class="logo">Coco <span>Pink</span></div-->
-
-        <nav class="navbar navbar-expand-md navbar-dark">
-            <!-- Brand -->
-            <a class="navbar-brand logo" href="#">Coco <span>Pink</span></a>
-
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <div>
+        <nav class="navbar navbar-expand-md navbar-light navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <a class="navbar-brand" href="index.html">
+                    <i class="bi-bi bi bi-gem"></i>
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="servicios.html">Servicios</a>
@@ -53,34 +55,38 @@
                 </ul>
             </div>
         </nav>
-    </header>
+    </div>
 
     <div class="jumbotron">
-        <button type="button" class="btn btn-light">
-            <h1>About me!</h1>
-        </button>
         <div><button type="button" class="btn btn-light">
                 <p>COCO PINK... El Sueño de mi Vida</p>
             </button></div>
     </div>
-    
-    <div class="fondo">
-        <p>Coco Pink nace de un sueño que tengo de toda mi vida. <br><br><br> La rutina de maquillaje y el cuidade de la
-            piel son parte de mi dia a dia, y hoy poder tener mi propia empresa de servicio de makeup profesional, es
-            un sueño hecho realidad </p><br><br><br>
-        <h2>
-            <p>Te invito a Conocernos!</p>
-        </h2>
-    </div>
 
-    <footer>
-        <p>Todos los derechos reservados por copyrigth</p>
-        <div class="redes">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://walink.co/624b8c"><i class="fa-brands fa-whatsapp"></i></a>
+
+    <section class="seccion-clara cuerpo align-items-stretch">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <h1 class="oscuro">Coco Pink</h1>
+            <h2>Coco Pink nace de un sueño que tengo de toda mi vida.</h2>
+            <h2>La rutina de maquillaje y el cuidade de la
+                piel son parte de mi dia a dia, y hoy poder tener mi propia empresa de servicio de makeup profesional,
+                es
+                un sueño hecho realidad</h2>
+            <h2> <strong>Te Invito a Conocernos!!</strong></h2>
         </div>
+    </section>
+
+    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+        <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
+        <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas.</p>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-whatsapp"></i></a>
+            <a href="#"><i class="bi bi-envelope"></i></a>
+        </div>
+
+        <div>Creado por Coco Pink (2023) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
