estilo, contraste y fuente

--- a/contacto.html
+++ b/contacto.html
@@ -10,36 +10,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Homemade+Apple&family=Reenie+Beanie&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" href="multimedia/icono.ico">
     <link rel="stylesheet" href="estilos.css">
     <title>Contacto</title>
 </head>
 
 <body>
-    <header>
-        <!--div class="logo">Coco <span>Pink</span></div-->
 
-        <nav class="navbar navbar-expand-md navbar-dark">
-            <!-- Brand -->
-            <a class="navbar-brand logo" href="#">Coco <span>Pink</span></a>
-
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <div>
+        <nav class="navbar navbar-expand-md navbar-light navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <a class="navbar-brand" href="index.html">
+                    <i class="bi-bi bi bi-gem"></i>
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -48,74 +51,127 @@
                         <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
         </nav>
-    </header>
+    </div>
+
+
 
     <div class="jumbotron2">
-        <button type="button" class="btn btn-light">
-            <h1>Contacto!</h1>
-        </button>
         <div><button type="button" class="btn btn-light">
-                <p>COCO PINK... El Sueño de mi Vida</p>
+                <p class="jum">COCO PINK... El Sueño de mi Vida</p>
             </button></div>
     </div>
 
-    <article class="list">
-        <div class="count tipoc">
-            <h2>Mapa de Sitio</h2>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3992951048176!2d-58.48442192417386!3d-34.69510746233052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcceb7695d3afd%3A0x3b59ffd67ca566a4!2s%C3%81lvarez%202634%2C%20B1772%20Villa%20Madero%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1684988410520!5m2!1ses!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade" class=" embed-responsive">Mapa de sitio </iframe>
-        </div>
 
-        <div class="count">
-            <h2>Contactanos</h2>
-            <form class="container">
-                <p>Nombre</p>
-                <input type="text"><br>
 
-                <p>Correo Electronico</p>
-                <input type="text"><br>
+    <article class="experiencia">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="columna col-12 col-md-6">
+                    <div class="badges-contenedor">
+                        <div>
+                            <p class="experiencia-titulo">MAPA DE SITIO</p>
+                            <div class="fron">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3992951048176!2d-58.48442192417386!3d-34.69510746233052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcceb7695d3afd%3A0x3b59ffd67ca566a4!2s%C3%81lvarez%202634%2C%20B1772%20Villa%20Madero%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1684988410520!5m2!1ses!2sar"
+                                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade" class=" embed-responsive"></iframe>
+                            </div>
 
-                <p>Servicio a Contratar</p>
-                <input type="text"><br>
-
-                <p>Mensaje</p>
-                <textarea></textarea><br>
-
-                <p>
-                    <input type="submit" value="Enviar Datos">
-                </p>
-            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="columna col-12 col-md-6">
+                    <div class="badges-contenedor">
+                        <div>
+                            <p class="experiencia-titulo">CONTACTANOS!</p>
+                            <form class="container">
+                                <div class="form-group">
+                                    <label for="usr">Name:</label>
+                                    <input type="text" class="form-control" id="usr">
+                                </div>
+                                <div class="form-group">
+                                    <label for="usr">Apellido:</label>
+                                    <input type="text" class="form-control" id="usr">
+                                </div>
+                                <div class="form-group">
+                                    <label for="comment">Mensaje:</label>
+                                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </article>
 
-    <footer>
-        <p>Todos los derechos reservados por copyrigth</p>
-        <div class="redes">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://walink.co/624b8c"><i class="fa-brands fa-whatsapp"></i></a>
+
+    <section class="seccion-clara cuerpo align-items-stretch">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <i class="bi bi-heart"></i>
+            <h2><strong>IMPORTANTE!.</strong></h2>
+            <h1 class="oscuro">Medios de Pago</h1>
+
         </div>
-    </footer>
+    </section>
+
+    <div class="seccion-gris">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center text-center">
+            <h2><strong>Tambien podes contactarnos por nuestros canales electronicos</strong></h2>
+            <i class="bi bi-credit-card">
+                <p>Tarjetas de Debito, Credito</p>
+            </i>
+            <i class="bi bi-bank">
+                <p>Transferencia Bancaria</p>
+            </i>
+            <i class="bi bi-cash-coin">
+                <p>Efectivo</p>
+            </i>
+            <i class="bi bi-piggy-bank">
+                <p>Mercado Pago</p>
+            </i>
+        </div>
+
+        <section class="seccion-clara cuerpo align-items-stretch">
+            <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+                <i class="bi bi-gem"></i>
+                <h2> <strong>Te Esperamos!!</strong></h2>
+            </div>
+        </section>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
+
+        <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+            <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
+            <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas.</p>
+            <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-whatsapp"></i></a>
+                <a href="#"><i class="bi bi-envelope"></i></a>
+            </div>
+
+            <div>Creado por Coco Pink (2023) &#169;</div>
+        </footer>
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+            crossorigin="anonymous"></script>
 
 </body>
 
