--- a/nosotros.html
+++ b/nosotros.html
@@ -59,15 +59,30 @@
 
     <div class="jumbotron">
         <div><button type="button" class="btn btn-light">
-                <p>COCO PINK... El Sueño de mi Vida</p>
+                <p class="jum">COCO PINK... El Sueño de mi Vida</p>
             </button></div>
     </div>
 
 
     <section class="seccion-clara cuerpo align-items-stretch">
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <i class="bi bi-heart"></i>
             <h1 class="oscuro">Coco Pink</h1>
-            <h2>Coco Pink nace de un sueño que tengo de toda mi vida.</h2>
+            <h2><strong>Coco Pink nace de un sueño que tengo de toda mi vida.</strong></h2>
+        </div>
+    </section>
+
+    <div class="seccion-gris">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <img src="multimedia/coleccion basico1.jpg" alt="foto" class="nav-logo-logo">
+        </div>
+    </div>
+
+    <section class="seccion-clara cuerpo align-items-stretch">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <h2>El maquillaje para mi significa tantas cosas... es una manera de autoconocimiento, de devolverle al
+                mundo un poco de todo lo hermoso que constantemente me da y lo que hace que quiera seguir siempre
+                adelante</h2>
             <h2>La rutina de maquillaje y el cuidade de la
                 piel son parte de mi dia a dia, y hoy poder tener mi propia empresa de servicio de makeup profesional,
                 es
@@ -75,6 +90,9 @@
             <h2> <strong>Te Invito a Conocernos!!</strong></h2>
         </div>
     </section>
+
+
+
 
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
         <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
