--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="makeup, maquillaje, servicio, fiesta, novias, maquillajeprofesional">
-    <meta name="descripcion." content="NUESTROS SERVICIO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
+    <meta name="keywords" content="makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
+    <meta name="descripcion." content="OFRECEMOS SERVICIO PERSONALIZADO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
     TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
     OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
             <img src="multimedia/icono.ico" alt="foto" class="nav-logo-logo">
             <h1>Coco Pink</h1>
-            <h2>Servicio de Maquillaje Profesional.</h2>
+            <h2><strong>Servicio de Maquillaje Profesional.</strong></h2>
         </div>
     </section>
 
