--- a/servicios.html
+++ b/servicios.html
@@ -60,7 +60,7 @@
 
     <div class="jumbotron5">
         <div><button type="button" class="btn btn-light">
-                <p class="jum">COCO PINK... El Sueño de mi Vida</p>
+            <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
             </button></div>
     </div>
 
