--- a/contacto.html
+++ b/contacto.html
@@ -62,7 +62,7 @@
 
     <div class="jumbotron2">
         <div><button type="button" class="btn btn-light">
-                <p class="jum">COCO PINK... El Sueño de mi Vida</p>
+                <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
             </button></div>
     </div>
 
