--- a/coleccionnight.html
+++ b/coleccionnight.html
@@ -1,77 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Homemade+Apple&family=Reenie+Beanie&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="icon" href="multimedia/icono.ico">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Coleccion Night</title>
-</head>
-<body>
-    <header>
-        <!--div class="logo">Coco <span>Pink</span></div-->
-
-        <nav class="navbar navbar-expand-md navbar-dark">
-            <!-- Brand -->
-            <a class="navbar-brand logo" href="#">Coco <span>Pink</span></a>
-
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+            rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+            integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <link rel="icon" href="multimedia/icono.ico">
+        <link rel="stylesheet" href="estilos.css">
+        <title>Nosotros</title>
+    </head>
+    
+    <body>
+        <div>
+            <nav class="navbar navbar-expand-md navbar-light navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                    <a class="navbar-brand" href="index.html">
+                        <i class="bi-bi bi bi-gem"></i>
+                    </a>
+                    <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     <div class="jumbotron4">
-        <button type="button" class="btn btn-light">
-            <h1>Night Coleccion!</h1>
-        </button>
         <div><button type="button" class="btn btn-light">
-                <p>COCO PINK... Night Coleccion Exclusiva para Vos!</p>
+            <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
             </button></div>
     </div>
 
-    <article class="list">
-        <div class="count">
-            <p> <span>Coco Pink</span> <br> <br> Durante la noche la luz artificial toma lugar y le resta intensidad a los colores. Por ello el maquillaje de noche se caracteriza por emplear tonos oscuros, intensos y atrevidos. Lo más importante de un maquillaje de noche es que haga tu rostro resaltar y te proporcione brillo y luminosidad ante la falta de luz.</p> <br>
-            </div>
-
-        <div class="count">
-            <p> <span>Night Exclusive Collection</span> <br> <span>Night Exclusive Collection</span> <br>
-                <span>Night
-                    Exclusive Collection</span> <br> Conocé nuestros elegidos en nuestra coleccion</p> <br>
+    <section class="seccion-clara cuerpo align-items-stretch">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <i class="bi bi-heart"></i>
+            <h1 class="oscuro">Coco Pink</h1>
+            <h2><strong>Coco Pink nace de un sueño que tengo de toda mi vida.</strong></h2>
         </div>
-    </article>
+    </section>
+
+    <section class="seccion-clara cuerpo align-items-stretch">
+        <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
+            <h2>Todos sabemos que usar un maquillaje de noche es nuestra oportunidad para lucir glamorosas y elegantes, tal cual una estrella de cine en la alfombra roja. Sin embargo, muchas no tenemos ni idea de como lograrlo, asi que nosotros te vamos a dejar hermosa para que te luzcas en esa ocacion tan especial </h2>
+            <h2> <strong>Te Invito a Conocernos!!</strong></h2>
+        </div>
+    </section>
 
     <main>
         <div class="imagen">
@@ -86,19 +89,18 @@
         </div>
     </main>
 
-    <footer>
-        <p>Todos los derechos reservados por copyrigth</p>
-        <div class="redes">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://walink.co/624b8c"><i class="fa-brands fa-whatsapp"></i></a>
+    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+        <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
+        <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas.</p>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-whatsapp"></i></a>
+            <a href="#"><i class="bi bi-envelope"></i></a>
         </div>
+
+        <div>Creado por Coco Pink (2023) &#169;</div>
     </footer>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -109,6 +111,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
+
     
 </body>
 </html>
