modificaciones y pruebas para entrega 4

--- a/nosotros.html
+++ b/nosotros.html
@@ -57,14 +57,16 @@
         </nav>
     </div>
 
+    <!--barra de navegacion -->
+
     <div class="jumbotron">
         <div><button type="button" class="btn btn-light">
-            <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
+                <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
             </button></div>
     </div>
 
 
-    <section class="seccion-clara cuerpo align-items-stretch">
+    <section class="seccion-clara cuerpo align-items-stretch container-fluid">
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
             <i class="bi bi-heart"></i>
             <h1 class="oscuro">Coco Pink</h1>
@@ -72,22 +74,24 @@
         </div>
     </section>
 
-    <div class="seccion-gris">
+    <div class="seccion-gris container-fluid">
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
             <img src="multimedia/coleccion basico1.jpg" alt="foto" class="nav-logo-logo">
         </div>
     </div>
 
-    <section class="seccion-clara cuerpo align-items-stretch">
+ 
+
+    <section class="seccion-clara cuerpo align-items-stretch container-fluid">
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
-            <h2>El maquillaje para mi significa tantas cosas... es una manera de autoconocimiento, de devolverle al
+            <p>El maquillaje para mi significa tantas cosas... es una manera de autoconocimiento, de devolverle al
                 mundo un poco de todo lo hermoso que constantemente me da y lo que hace que quiera seguir siempre
-                adelante</h2>
-            <h2>La rutina de maquillaje y el cuidade de la
+                adelante</p>
+            <p>La rutina de maquillaje y el cuidade de la
                 piel son parte de mi dia a dia, y hoy poder tener mi propia empresa de servicio de makeup profesional,
                 es
-                un sueño hecho realidad</h2>
-            <h2> <strong>Te Invito a Conocernos!!</strong></h2>
+                un sueño hecho realidad</p>
+            <p> <strong>Te Invito a Conocernos!!</strong></p>
         </div>
     </section>
 
