--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
+    <meta name="author" content="coco pink">
+    <meta name="keywords" content="coco pink, makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
     <meta name="descripcion." content="OFRECEMOS SERVICIO PERSONALIZADO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
     TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
     OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
@@ -48,7 +49,7 @@
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
