--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="coco pink">
+    <meta name="keywords" content="quienes somos, coco pink, nosotros, makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
+    <meta name="descripcion." content="OFRECEMOS SERVICIO PERSONALIZADO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
+    TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
+    OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
@@ -76,7 +81,7 @@
 
     <div class="seccion-gris container-fluid">
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
-            <img src="multimedia/coleccion basico1.jpg" alt="foto" class="nav-logo-logo">
+            <img src="multimedia/coleccion basico1.jpg" alt="foto de autor" class="nav-logo-logo">
         </div>
     </div>
 
