--- a/coleccionnight.html
+++ b/coleccionnight.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
-            rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-            integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="icon" href="multimedia/icono.ico">
-        <link rel="stylesheet" href="estilos.css">
-        <title>Nosotros</title>
-    </head>
-    
-    <body>
-        <div>
-            <nav class="navbar navbar-expand-md navbar-light navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarToggler">
-                    <a class="navbar-brand" href="index.html">
-                        <i class="bi-bi bi bi-gem"></i>
-                    </a>
-                    <ul class="navbar-nav d-flex justify-content-center align-items-center">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="coco pink">
+    <meta name="keywords"
+        content="coco pink, fotos, modelos, trabajos, maquillaje nocturno, makeup noche, makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
+    <meta name="descripcion." content="OFRECEMOS SERVICIO PERSONALIZADO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
+    TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
+    OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Reenie+Beanie&family=Rubik+Dirt&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" href="multimedia/icono.ico">
+    <link rel="stylesheet" href="estilos.css">
+    <title>Nosotros</title>
+</head>
+
+<body>
+    <div>
+        <nav class="navbar navbar-expand-md navbar-light navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <a class="navbar-brand" href="index.html">
+                    <i class="bi-bi bi bi-gem"></i>
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="jumbotron4">
         <div><button type="button" class="btn btn-light">
-            <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
+                <p class="jum"><span>Coco Pink... </span>El sueño de mi vida</p>
             </button></div>
     </div>
 
@@ -71,7 +78,9 @@
 
     <section class="seccion-clara cuerpo align-items-stretch">
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
-            <h2>Todos sabemos que usar un maquillaje de noche es nuestra oportunidad para lucir glamorosas y elegantes, tal cual una estrella de cine en la alfombra roja. Sin embargo, muchas no tenemos ni idea de como lograrlo, asi que nosotros te vamos a dejar hermosa para que te luzcas en esa ocacion tan especial </h2>
+            <h2>Todos sabemos que usar un maquillaje de noche es nuestra oportunidad para lucir glamorosas y elegantes,
+                tal cual una estrella de cine en la alfombra roja. Sin embargo, muchas no tenemos ni idea de como
+                lograrlo, asi que nosotros te vamos a dejar hermosa para que te luzcas en esa ocacion tan especial </h2>
             <h2> <strong>Te Invito a Conocernos!!</strong></h2>
         </div>
     </section>
@@ -112,6 +121,7 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
 
-    
+
 </body>
+
 </html>
