--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="coco pink">
+    <meta name="keywords" content="coco pink, servicio, makeup, maquillaje, servicio, fiesta, novias, Makeup Artist, Belleza, maquillajeprofesional">
+    <meta name="descripcion." content="OFRECEMOS SERVICIO PERSONALIZADO DE MAKEUP PARA EVENTOS Y CUALQUIER MOMENTO DEL DIA, TRABAJANDO
+    TODAS LAS MARCAS DE MAQUILLAJES DISPONIBLES EN EL MERCADO. NUESTRO TRABAJO ES 100% PROFESIONAL Y DEDICADO,
+    OFRECIENDO AL CLIENTE UN SERVICIO ÚNICO E IRREPETIBLE">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
@@ -79,13 +84,13 @@
         <div id="carouselExampleControls" class="carousel slide container" data-ride="carousel">
             <div class="carousel-inner animate_animated animate_flash">
                 <div class="carousel-item active">
-                    <img src="multimedia/carrusel.png" class="d-block w-100 carrusel" alt="fotos baner">
+                    <img src="multimedia/carrusel.png" class="d-block w-100 carrusel" alt="foto makeup coco pink">
                 </div>
                 <div class="carousel-item">
-                    <img src="multimedia/carrusel3.png" class="d-block w-100 carrusel" alt="baner makeup">
+                    <img src="multimedia/carrusel3.png" class="d-block w-100 carrusel" alt="foto coco pink">
                 </div>
                 <div class="carousel-item">
-                    <img src="multimedia/carrusel2.png" class="d-block w-100 carrusel" alt="foto desc">
+                    <img src="multimedia/carrusel2.png" class="d-block w-100 carrusel" alt="foto descuento">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls"
@@ -112,14 +117,14 @@
     <section class="seccion-clara cuerpo align-items-stretch">
         <div class="cuerpo-principal d-flex flex-column justify-content-center text-center align-items-center">
             <i class="bi bi-gift"></i>
-            <h2>Servicio personalizado para todo eventos sociales, diurno, nocturno, bodas, 15 años,
-                madrinas o para simplemente verte hermosa y radiante todos los dias!</h2>
+            <p>Servicio personalizado para todo eventos sociales, diurno, nocturno, bodas, 15 años,
+                madrinas o para simplemente verte hermosa y radiante todos los dias!</p>
         </div>
     </section>
 
 
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-        <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
+        <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portada">
         <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas.</p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="#"><i class="bi bi-instagram"></i></a>
