--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-gem"></i>
                     <p class="experiencia-titulo"> <a href="coleccionbasicos.html"></a>Coleccion Basicos</p>
-                    <p>Si es para un evento de día, ya sea una boda, cumpleaños o cualquier tipo de reunión social, puedes utilizar un maquillaje más elaborado en tonos nudes, cálidos, rosas, o incluso tonos neutros. Siempre compensando el maquillaje y decidiendo cuál quieres que sea el foco de atención. Si quieres otorgar mayor visibilidad a los ojos, los labios deben lucir tonos suaves y viceversa.</p>
+                    <p>Si es para un evento de día, ya sea cualquier tipo de reunión social, puedes utilizar un maquillaje más elaborado en tonos nudes o incluso tonos neutros. Siempre compensando el maquillaje y decidiendo cuál quieres que sea el foco de atención.</p>
                     <div class="badges-contenedor">
                         <button type="button" class="badge btn-secondary"><a href="coleccionbasicos.html">Ver
                                 mas</a></button>
@@ -136,7 +136,7 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-gem"></i>
                     <p class="experiencia-titulo"><a href="coleccionnight.html"></a>Coleccion Night</p>
-                    <p>El maquillaje de noche se caracteriza por ser más llamativo para compensar la falta de luz, ya que por la noche se produce el efecto contrario a la luminosidad característica del día. Para solucionarlo, el maquillaje de noche se caracteriza por utilizar tonos más llamativos usando técnicas que marquen más el maquillaje y lo carguen ligeramente en comparación con el maquillaje de día.</p>
+                    <p>El maquillaje de noche se caracteriza por ser más llamativo para compensar la falta de luz, ya que por la noche se produce el efecto contrario a la luminosidad característica del día.</p>
                     <div class="badges-contenedor">
                         <button type="button" class="badge btn-secondary"><a href="coleccionnight.html">Ver
                                 mas</a></button>
