agregue una media queries al logo del nav

--- a/contacto.html
+++ b/contacto.html
@@ -79,7 +79,7 @@
                 <div class="columna col-12 col-md-6">
                     <div class="badges-contenedor">
                         <div>
-                            <p class="experiencia-titulo">MAPA DE SITIO</p>
+                            <p class="experiencia-titulo">ENCONTRANOS!</p>
                             <div class="fron">
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3992951048176!2d-58.48442192417386!3d-34.69510746233052!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcceb7695d3afd%3A0x3b59ffd67ca566a4!2s%C3%81lvarez%202634%2C%20B1772%20Villa%20Madero%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1684988410520!5m2!1ses!2sar"
@@ -96,7 +96,7 @@
                             <p class="experiencia-titulo">CONTACTANOS!</p>
                             <form class="container">
                                 <div class="form-group">
-                                    <label for="usr">Name:</label>
+                                    <label for="usr">Nombre:</label>
                                     <input type="text" class="form-control" id="usr">
                                 </div>
                                 <div class="form-group">
