--- a/coleccionnight.html
+++ b/coleccionnight.html
@@ -72,7 +72,7 @@
         <div class="cuerpo-principal d-flex flex-column justify-content-center align-items-center">
             <i class="bi bi-heart"></i>
             <h1 class="oscuro">Coco Pink</h1>
-            <h2><strong>Coco Pink nace de un sueño que tengo de toda mi vida.</strong></h2>
+            <h2><strong>Coco Pink nace de un sueño de toda mi vida.</strong></h2>
         </div>
     </section>
 
