--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
                         <div>
                             <div class="form_contact">
                                 <form class="form_box" id="formulario">
-                                    <label  for="Datos">Nombre </label>
+                                    <label  for="Datos">Nombres </label>
                                     <input  type="Nombre" placeholder="introduza su nombre" id="nombre">
                                     <label  for="Datos">Apellido</label>
                                     <input type="Nombre" placeholder="introduza su apellido 
