--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
         <img class="footer-logo" src="multimedia/icono.ico" alt="logo del portafolio">
-        <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas.</p>
+        <p class="footer-texto text-center">Aprendo y creo todos los dias. <br> Creemos belleza juntas!</p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="#"><i class="bi bi-instagram"></i></a>
             <a href="#"><i class="bi bi-twitter"></i></a>
