--- a/nosotros.html
+++ b/nosotros.html
@@ -96,7 +96,7 @@
                 piel son parte de mi dia a dia, y hoy poder tener mi propia empresa de servicio de makeup profesional,
                 es
                 un sueño hecho realidad</p>
-            <p> <strong>Te Invito a Conocernos!!</strong></p>
+            <p> <strong>Te Invito a Conocernos!!!</strong></p>
         </div>
     </section>
 
