--- a/servicios.html
+++ b/servicios.html
@@ -110,7 +110,7 @@
 
     <section class="seccion-gris cuerpo align-items-stretch">
         <div class="cuerpo-principal d-flex flex-column justify-content-center text-center align-items-center">
-            <h2><strong>Combo Descuento 50% OFF en MakeUp diurno!!!</strong></h2>
+            <h2><strong>Combo Descuento 50% Off en MakeUp diurno!!!</strong></h2>
         </div>
     </section>
 
